perf(jm): 代码优化